收敛远程工具绑定结构并校验 API Fabric 路径模板